Handle internal commands using command bus and write repository. Add UlidSymfony generator
