# docs/openapi/index.yaml
@@ -20,11 +20,37 @@ paths:
       summary: Menu item collection
       responses:
         "200":
-          description: A JSON array of user names
+          description: Collection returned successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/MenuItemCollection'
+    post:
+      tags:
+        - MenuCatalog
+      summary: Create menu item
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                price:
+                  type: object
+                  properties:
+                    net:
+                      type: integer
+                      description: value in cents
+                    vat:
+                      type: integer
+                      description: value in basis points e.g. 8050 = 8.5%
+      responses:
+        "201":
+          description: Resource created
+
 
 components:
   schemas:
